# petit-db

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
petitdb/: __init__.py  __main__.py  database.py  predicate.py  query.py  repl.py  storage.py
tests/: test_petitdb.py
