[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "petit-db"
version = "0.2.0"
description = "A tiny toy database for poking at database internals."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
packages = ["petitdb"]
